# promptbank

./: Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: index.html
src/: claude.rs  cli.rs  community.rs  error.rs  main.rs  prompt.rs  storage.rs
