[package]
name = "promptbank"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to manage and apply prompts for Claude AI"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
directories = "5.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
dialoguer = "0.11"
arboard = "3.4"
thiserror = "1.0"
